# c-basic-programming

./: CMakeLists.txt  README.md
array-and-string/: array.c  main.c  main.h  string.c
bit-field/: main.c  main.h
condition-and-loop/: README.md  for_loop.c  global_declarations.h  if_else_statement.c  main.c  switch_case.c  while_statement.c
function-and-scope/: README.md  function-and-scope.h  main.c  math-function.c  pass-by-value-or-reference.c  scope.c
hello-world/: README.md
operator/: README.md  arithmetic_operators.c  assignment_operators.c  bitwise_operators.c  global_declarations.h  increment_and_decrement_operators.c  logical_operators.c  main.c  relational_operators.c
standard-input-output/: README.md  char_input.c  float_input.c  global_declarations.h  int_input.c  main.c
variable-and-data-type/: README.md  constants.c  data_types.c  global_declarations.h  main.c  variables.c
